# rust-explorations

./: .gitignore  Cargo.toml
hello-world/: Cargo.toml
hello-world/src/: main.rs
ownership-exercises/: Cargo.toml
ownership-exercises/src/: main.rs
polymarket-indexer/: .env.example  CLAUDE.md  Cargo.toml  PLAN.md
polymarket-indexer/.sqlx/: query-0d4de7868b5d1e1cae9d5a333a8d2b4e7868cd3196523147942d2e17c0e20f5d.json  query-13a066730b2dd5cec341e854cd504595e3e4514dbf2c7b746defc5aed850cc42.json  query-1e053888c234d38a7d52a38d8a212e299d7cca2924db4ec2e9b1418bfaf90cd3.json  query-28770a7434b13a48733e97e9a15094529082ef2b424b5c3f89bb8a89dffb1434.json  query-8964540ce848793b93e465f82943fe3431f8da2cf62abb83ae7d42484273df4e.json  query-9463753831113d7bd868a95490f5a59482f0af93bf7dd63a2b021df84d105c9c.json  query-a92ced93291efbb78c06e4306107ca85a86bd4a655f5c38775866d647dc124b2.json  query-d2feb8b50df23fb5a0d6213a5ac1931c4d39531d0e44f1afe6a4caad0055dac7.json
polymarket-indexer/migrations/: 20241113000000_create_markets_table.sql  20241114000000_alter_markets_add_pm_id_remove_category.sql  20241114000001_create_market_tags_table.sql  20241114000002_normalize_tags_schema.sql
polymarket-indexer/src/: client.rs  constants.rs  events.rs  lib.rs  main.rs  provider.rs
polymarket-indexer/src/client/: evm.rs  gamma.rs  mod.rs
polymarket-indexer/src/db/: market_tags.rs  markets.rs  mod.rs  models.rs
polymarket-indexer/src/polymarket/: addresses.rs  constants.rs  core.rs  events.rs  market.rs  mod.rs
text-analyzer/: Cargo.toml  sample.txt
text-analyzer/src/: main.rs
