[workspace]
members = [
    "hello-world",
]
resolver = "2"

# Shared workspace dependencies (optional)
# Add common dependencies here as you progress
[workspace.dependencies]
# Example: serde = { version = "1.0", features = ["derive"] }

# Shared workspace metadata (optional)
[workspace.package]
edition = "2021"
