[package]
name = "polymarket-indexer"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = "0.3"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "stream"
path = "src/bin/stream.rs"
